Fix color contrast issues in text
The success button green is too light and the gray for the paths
in the quicklooks is too light of a gray.

Dano mentioned he wanted a different solution for the green but I
think we should fix accessibility issues as soon as possible.

--- a/src/css/components/contents.scss
+++ b/src/css/components/contents.scss
@@ -19,5 +19,5 @@
 }
 
 .contents-path {
-  color: $color-mediumgray;
+  color: $color-darkgray;
 }
